--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ node_modules
 **/appsettings.json
 **/appsettings.*.json
 **/*sonar*
+
+#Custom
+src/Lykke.Job.PayTelegramReporter/PayTelegramReporter.json
