--- a/settings.yaml
+++ b/settings.yaml
@@ -1,25 +1,47 @@
 PayTelegramReporterJob:
-  Db:
-    LogsConnString:
-      settings-key: LogsConnString
-      types:
-        - AzureTableStorage
-  Rabbit:
-    ConnectionString:
-      settings-key: ConnectionString
-      types:
-        - RabbitMq
-    ExchangeName:
-      settings-key: ExchangeName
+    Db:
+        LogsConnString:
+            settings-key: LykkePayLogsConnString
+            types: [ AzureTableStorage, Tag ]
+    PaymentRequestsSubscriber:
+        ConnectionString:
+            settings-key: RabbitPay
+            types: [ RabbitMq, Tag ]
+        ExchangeName:
+            settings-key: LykkePay-PaymentRequestsExchangeName
+            types: [ Tag ]
+    Telegram:
+        ProxySettings:
+            Host: 
+                settings-key: Telegram-ProxySettings-Host
+            Port: 
+                settings-key: Telegram-ProxySettings-Port
+            Username: 
+                settings-key: Telegram-ProxySettings-Username
+            Password: 
+                settings-key: Telegram-ProxySettings-Password
+        Token: 
+            settings-key: PayTelegramReporterJob-Telegram-Token
+    PaymentRequestStatusReporter:
+        ChatId:
+            settings-key: PayTelegramReporterJob-PaymentRequestStatusReporter-ChatId
+            types: [ Tag ]
+        MerchantIds: 
+            settings-key: PayTelegramReporterJob-PaymentRequestStatusReporter-MerchantIds
+            types: [ JsonArray, Tag ]
+        LykkeXHotWallet:
+            settings-key: PayTelegramReporterJob-PaymentRequestStatusReporter-LykkeXHotWallet
+            types: [ Tag ]
+            
 SlackNotifications:
     AzureQueue:
         ConnectionString:
             settings-key: SlackNotificationsConnString
-            types:
-                - AzureTableStorage
+            types: [ AzureTableStorage ]
         QueueName:
             settings-key: SlackQueueName
+            
 MonitoringServiceClient:
     MonitoringServiceUrl:
         settings-key: MonitoringServiceUrl
-
+        types: [ Tag ]
