--- a/src/Lykke.Job.PayTelegramReporter.DomainServices/Lykke.Job.PayTelegramReporter.DomainServices.csproj
+++ b/src/Lykke.Job.PayTelegramReporter.DomainServices/Lykke.Job.PayTelegramReporter.DomainServices.csproj
@@ -4,6 +4,22 @@
     <Version>1.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="HttpToSocks5Proxy" Version="1.0.5" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Lykke.Job.PayTelegramReporter.Domain\Lykke.Job.PayTelegramReporter.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="MessageTemplates.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MessageTemplates.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="MessageTemplates.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MessageTemplates.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
