Fix settings LPDEV-886

--- a/settings.yaml
+++ b/settings.yaml
@@ -25,7 +25,7 @@ PayTelegramReporterJob:
             types: [ JsonArray, Tag ]
         LykkeXHotWallet:
             settings-key: PayTelegramReporterJob-PaymentRequestStatusReporter-LykkeXHotWallets
-            types: [ Tag ]
+            types: [ JsonArray, Tag ]
             
 SlackNotifications:
     AzureQueue:
