Fix settings LPDEV-886

--- a/settings.yaml
+++ b/settings.yaml
@@ -33,7 +33,7 @@ PayTelegramReporterJob:
         MerchantIds: 
             settings-key: PayTelegramReporterJob-PaymentRequestStatusReporter-MerchantIds
             types: [ JsonArray, Tag ]
-        LykkeXHotWallet:
+        LykkeXHotWallets:
             settings-key: PayTelegramReporterJob-PaymentRequestStatusReporter-LykkeXHotWallets
             types: [ JsonArray, Tag ]
             
